fix reconnect button on mobile

--- a/data/assets/css/style.css
+++ b/data/assets/css/style.css
@@ -89,3 +89,11 @@ input[type=radio] {
   height: 20px;
   cursor: pointer;
 }
+
+.button-reconnect {
+  background: none;
+}
+
+.button-reconnect:hover {
+  background: none;
+}
